fixing tests (2)